[gd_scene load_steps=19 format=3 uid="uid://7lwoyut66nch"]

[ext_resource type="Script" uid="uid://byft1s2o70v3p" path="res://scenes/play_menu.gd" id="1_i28jh"]
[ext_resource type="Shader" uid="uid://cscn0e82hjbot" path="res://scenes/jukebox_menu.gdshader" id="2_77b2i"]
[ext_resource type="Texture2D" uid="uid://b5x8yg3gy8ufi" path="res://pics/Title screen/Loading screen - BG.png" id="3_c0pck"]
[ext_resource type="Texture2D" uid="uid://cqpb5erwi8ha6" path="res://pics/Jukebox menu/Back to main - base.png" id="4_rcqgc"]
[ext_resource type="Texture2D" uid="uid://cgqvcgkahg6jv" path="res://pics/Jukebox menu/Back to main - click.png" id="5_x76kw"]
[ext_resource type="Texture2D" uid="uid://pe7cyt1x0x6g" path="res://pics/Jukebox menu/Back to main - hover.png" id="6_phdgt"]
[ext_resource type="Texture2D" uid="uid://cmy3s8gwgr66v" path="res://pics/Jukebox menu/left - base.png" id="7_4nt4x"]
[ext_resource type="Texture2D" uid="uid://cisjsfs3gd5cg" path="res://pics/Play menu/confirm - base.png" id="7_rcqgc"]
[ext_resource type="Texture2D" uid="uid://c56enqvv1i661" path="res://pics/Jukebox menu/left - click.png" id="8_i6nux"]
[ext_resource type="Texture2D" uid="uid://cuotjt7uv1i8j" path="res://pics/Play menu/confirm - click.png" id="8_x76kw"]
[ext_resource type="Texture2D" uid="uid://c4m8f61boy1x6" path="res://pics/Jukebox menu/left - hover.png" id="9_7ctoh"]
[ext_resource type="Texture2D" uid="uid://bstu0l5skhtgb" path="res://pics/Play menu/confirm - hover.png" id="9_phdgt"]
[ext_resource type="FontFile" uid="uid://fvwl7rilu2v8" path="res://fonts/Husky Stash.otf" id="10_aueoj"]
[ext_resource type="Texture2D" uid="uid://4lirmidviaba" path="res://pics/Jukebox menu/right - base.png" id="11_2tw2n"]
[ext_resource type="Texture2D" uid="uid://cn6hremlp6ro3" path="res://pics/Jukebox menu/right - click.png" id="12_fnqc0"]
[ext_resource type="Texture2D" uid="uid://cmak1yd7gx876" path="res://pics/Jukebox menu/right - hover.png" id="13_81w3l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wccnp"]
shader = ExtResource("2_77b2i")
shader_parameter/speed = 0.01

[sub_resource type="LabelSettings" id="LabelSettings_3lx05"]
font = ExtResource("10_aueoj")
font_size = 75
font_color = Color(1, 0.380392, 0, 1)
outline_size = 30
outline_color = Color(0.0627451, 0.0156863, 0.137255, 1)
shadow_size = 55
shadow_color = Color(1, 1, 1, 1)

[node name="PlayMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i28jh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.0392157, 1)

[node name="MenuBG" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_wccnp")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_c0pck")

[node name="BackToMain" type="TextureButton" parent="MenuBG"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -632.0
offset_top = -307.0
offset_right = -172.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("4_rcqgc")
texture_pressed = ExtResource("5_x76kw")
texture_hover = ExtResource("6_phdgt")

[node name="ConfirmationButton" type="TextureButton" parent="MenuBG"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 118.0
offset_top = -310.0
offset_right = 578.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("7_rcqgc")
texture_pressed = ExtResource("8_x76kw")
texture_hover = ExtResource("9_phdgt")

[node name="LeftButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.423148
anchor_right = 0.241667
anchor_bottom = 0.576852
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("7_4nt4x")
texture_pressed = ExtResource("8_i6nux")
texture_hover = ExtResource("9_7ctoh")
ignore_texture_size = true
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Options" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.247917
anchor_top = 0.235185
anchor_right = 0.752083
anchor_bottom = 0.741667
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_3lx05")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="RightButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.728125
anchor_top = 0.387963
anchor_right = 1.0
anchor_bottom = 0.612037
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource("11_2tw2n")
texture_pressed = ExtResource("12_fnqc0")
texture_hover = ExtResource("13_81w3l")
ignore_texture_size = true
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="MenuBG/BackToMain" to="." method="_on_back_to_main_pressed"]
[connection signal="pressed" from="MenuBG/ConfirmationButton" to="." method="_on_confirmation_button_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
